--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "0.2.0"
 description = "A Minesweeper Game"
 authors = ["Nav"]
 license = "MIT"
@@ -16,7 +16,14 @@ tauri-build = { version = "1.0.0-rc.12", features = [] }
 serde_json = "1.0.81"
 rand = "0.8.5"
 serde = { version = "1.0.137", features = ["derive"] }
-tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
+tauri = { version = "1.0.0-rc.14", features = [] }
+
+[profile.release]
+strip = true
+panic = "abort"
+codegen-units = 1
+lto = true
+opt-level = "s"
 
 [features]
 default = [ "custom-protocol" ]
